[SGA-2] 각 뷰에 대한 색상 적용을 위한 style 정리

--- a/app/src/main/res/layout/activity_createparty.xml
+++ b/app/src/main/res/layout/activity_createparty.xml
@@ -22,20 +22,19 @@
         android:id="@+id/createparty_register_party_btn"
         style="@style/CreatePartyBtnTheme"
         android:layout_alignParentRight="true"
-        android:text="등록하기"
-        />
+        android:text="등록하기" />
 
     <Button
         android:id="@+id/createparty_cancel_party_btn"
         style="@style/CreatePartyBtnTheme"
         android:layout_alignParentLeft="true"
-        android:text="취소"/>
+        android:text="취소" />
 
     <Button
         android:id="@+id/createparty_confirm_btn"
         style="@style/CreatePartyBtnTheme"
         android:layout_alignParentRight="true"
-        android:text="확인"/>
+        android:text="확인" />
 
     <LinearLayout
         android:id="@+id/createparty_toolbar"
@@ -46,100 +45,108 @@
         android:background="#ffeeeeee" />
 
     <RelativeLayout
-        android:id="@+id/createparty_partycontent_layout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/createparty_toolbar"
-        android:layout_margin="@dimen/createactivity_boudary_margin"
-        android:focusable="true"
-        android:focusableInTouchMode="true">
+        android:layout_height="match_parent"
+        android:layout_below="@id/createparty_toolbar">
 
-        <android.support.design.widget.TextInputLayout
-            android:id="@+id/createparty_input_title_layout"
+        <RelativeLayout
+            android:id="@+id/createparty_partycontent_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/createactivity_content_marginTop"
-            >
-
-            <EditText
-                android:id="@+id/createparty_input_title_edt"
-                android:hint="모임명을 입력해주세요 :)"
-                style="@style/CreatePartyEditTextTheme"
-                android:inputType="text"
-                android:maxLength="15"
-                />
-
-        </android.support.design.widget.TextInputLayout>
-
-        <Spinner
-            android:id="@+id/createparty_select_category_spn"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/createactivity_content_height"
-            android:layout_marginTop="@dimen/createactivity_content_marginTop"
-            android:layout_below="@id/createparty_input_title_layout" />
-
-        <TextView
-            android:id="@+id/createparty_select_deadline_txt"
-            android:layout_width="match_parent"
-            android:layout_height="30dp"
-            android:layout_below="@id/createparty_select_category_spn"
-            android:paddingLeft="3dp"
-            android:clickable="true"
+            android:layout_margin="@dimen/createactivity_boudary_margin"
             android:focusable="true"
-            android:text="모집 기간을 선택해 주세요 :)"
-            android:textColor="#828282"
-            android:textSize="15dp" />
+            android:focusableInTouchMode="true">
+
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/createparty_input_title_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/createactivity_content_marginTop"
+                app:hintTextAppearance="@style/TextLabel2">
+
+                <EditText
+                    android:id="@+id/createparty_input_title_edt"
+                    style="@style/CreatePartyEditTextTheme"
+                    android:hint="모임명"
+                    android:inputType="text"
+                    android:maxLength="15" />
+
+            </android.support.design.widget.TextInputLayout>
+
+            <Spinner
+                android:id="@+id/createparty_select_category_spn"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/createactivity_content_height"
+                android:layout_below="@id/createparty_input_title_layout"
+                android:layout_marginTop="@dimen/createactivity_content_marginTop" />
+
+            <TextView
+                android:id="@+id/createparty_select_deadline_txt"
+                android:layout_width="match_parent"
+                android:layout_height="30dp"
+                android:layout_below="@id/createparty_select_category_spn"
+                android:clickable="true"
+                android:focusable="true"
+                android:paddingLeft="3dp"
+                android:text="모집 마감기간"
+                android:textColor="#000000"
+                android:textSize="25sp" />
 
 
-        <android.support.design.widget.TextInputLayout
-            android:id="@+id/createparty_input_membernum_layout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/createactivity_content_marginTop"
-            android:layout_below="@id/createparty_select_deadline_txt">
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/createparty_input_membernum_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/createparty_select_deadline_txt"
+                android:layout_marginTop="@dimen/createactivity_content_marginTop"
+                app:hintTextAppearance="@style/TextLabel2">
 
-            <EditText
-                android:id="@+id/createparty_input_membernum_edt"
-                style="@style/CreatePartyEditTextTheme"
-                android:hint="모집할 인원수를 입력해주세요 :)"
-                android:digits="0123456789"
-                android:inputType="number"
-                />
+                <EditText
+                    android:id="@+id/createparty_input_membernum_edt"
+                    style="@style/CreatePartyEditTextTheme"
+                    android:digits="0123456789"
+                    android:hint="모집할 인원수"
+                    android:inputType="number" />
 
-        </android.support.design.widget.TextInputLayout>
+            </android.support.design.widget.TextInputLayout>
 
-        <android.support.design.widget.TextInputLayout
-            android:id="@+id/createparty_input_information_layout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/createactivity_content_marginTop"
-            android:layout_below="@id/createparty_input_membernum_layout">
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/createparty_input_information_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/createparty_input_membernum_layout"
+                android:layout_marginTop="@dimen/createactivity_content_marginTop"
+                app:hintTextAppearance="@style/TextLabel2">
 
-            <EditText
-                android:id="@+id/createparty_input_information_edt"
-                style="@style/CreatePartyEditTextTheme"
-                android:hint="모임 내용을 간단히 소개해주세요 :)"
-                android:maxLength="60"
-                />
+                <EditText
+                    android:id="@+id/createparty_input_information_edt"
+                    style="@style/CreatePartyEditTextTheme"
+                    android:layout_height="60dp"
+                    android:hint="모임 소개"
+                    android:padding="0dp"
+                    android:maxLength="60" />
 
-        </android.support.design.widget.TextInputLayout>
+            </android.support.design.widget.TextInputLayout>
 
-        <android.support.design.widget.TextInputLayout
-            android:id="@+id/createparty_input_tag_layout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/createactivity_content_marginTop"
-            android:layout_below="@id/createparty_input_information_layout">
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/createparty_input_tag_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/createparty_input_information_layout"
+                android:layout_marginTop="@dimen/createactivity_content_marginTop"
+                app:hintTextAppearance="@style/TextLabel2">
 
-            <org.collapsed.ssuparty_android.utils.TagsEditText
-                android:id="@+id/createparty_tag_edt"
-                style="@style/CreatePartyEditTextTheme"
-                android:hint="태그 입력 후 엔터!"
-                TagsEditText:allowSpaceInTag="true"
-                TagsEditText:tagsBackground="@drawable/square_default"
-                TagsEditText:tagsCloseImageRight="@drawable/tag_close" />
+                <org.collapsed.ssuparty_android.utils.TagsEditText
+                    android:id="@+id/createparty_tag_edt"
+                    style="@style/CreatePartyEditTextTheme"
+                    android:hint="태그 입력"
+                    TagsEditText:allowSpaceInTag="true"
+                    TagsEditText:tagsBackground="@drawable/square_default"
+                    TagsEditText:tagsCloseImageRight="@drawable/tag_close" />
 
-        </android.support.design.widget.TextInputLayout>
+            </android.support.design.widget.TextInputLayout>
+
+        </RelativeLayout>
 
     </RelativeLayout>
 
