--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,12 +3,17 @@
 
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="createactivity_boudary_margin">20dp</dimen>
+
     <dimen name="createactivity_content_width">200dp</dimen>
-    <dimen name="createactivity_content_height">45dp</dimen>
+    <dimen name="createactivity_content_height">50dp</dimen>
     <dimen name="createactivity_content_marginTop">25dp</dimen>
-    <dimen name="createactivity_content_textsize">15dp</dimen>
+    <dimen name="createactivity_content_textsize">25sp</dimen>
+
     <dimen name="createactivity_button_margin">10dp</dimen>
     <dimen name="createactivity_button_width">60dp</dimen>
     <dimen name="createactivity_button_height">25dp</dimen>
+
+    <dimen name="createactivity_hint_marginTop">10dp</dimen>
+    <dimen name="createactivity_hint_TextSize">21sp</dimen>
 
 </resources>
