--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -20,7 +20,7 @@
         <item name="android:layout_height">@dimen/createactivity_button_height</item>
         <item name="android:layout_margin">@dimen/createactivity_button_margin</item>
         <item name="android:textColor">#46B8FF</item>
-        <item name="android:textSize">@dimen/createactivity_content_textsize</item>
+        <item name="android:textSize">15sp</item>
         <item name="android:background">#00FF0000</item>
     </style>
 
@@ -31,6 +31,8 @@
         <item name="android:textColor">#000000</item>
         <item name="android:textColorHint">#828282</item>
         <item name="android:textSize">@dimen/createactivity_content_textsize</item>
+        <item name="android:paddingTop">@dimen/createactivity_hint_marginTop</item>
+        <item name="android:textCursorDrawable">@null</item>
     </style>
 
     <style name="TextLabel" parent="TextAppearance.AppCompat">
@@ -41,6 +43,11 @@
         <item name="colorAccent">#000000</item>
         <item name="colorControlNormal">#000000</item>
         <item name="colorControlActivated">#000000</item>
+    </style>
+
+    <style name="TextLabel2" parent="TextAppearance.Design.Hint">
+        <item name="android:textSize">@dimen/createactivity_hint_TextSize</item>
+        <item name="android:textColor">#bcb5e1</item>
     </style>
 
     <declare-styleable name="CustomTextView">
