[DEV] custom view package 수정

--- a/app/src/main/res/layout/activity_createparty.xml
+++ b/app/src/main/res/layout/activity_createparty.xml
@@ -136,7 +136,7 @@
                 android:layout_marginTop="@dimen/createactivity_content_marginTop"
                 app:hintTextAppearance="@style/TextLabel2">
 
-                <org.collapsed.ssuparty_android.utils.TagsEditText
+                <org.collapsed.ssuparty_android.ui.customview.TagsEditText
                     android:id="@+id/createparty_tag_edt"
                     style="@style/CreatePartyEditTextTheme"
                     android:hint="태그 입력"
