--- a/app/src/main/res/layout/fragment_findparty.xml
+++ b/app/src/main/res/layout/fragment_findparty.xml
@@ -1,30 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout
-
-
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+<android.support.design.widget.CoordinatorLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/findparty_recycler_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-         />
-        <android.support.design.widget.FloatingActionButton
-            android:id="@+id/findparty_btn_fab"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_group_white_24dp"
-            app:elevation="4dp"
-            app:layout_anchor="@id/findparty_recycler_view"
-            app:layout_anchorGravity="right|bottom"
-        />
+        android:layout_height="match_parent" />
 
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/findparty_btn_fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="15dp"
+        android:src="@drawable/ic_group_add_white_24dp" />
 
 </android.support.design.widget.CoordinatorLayout>
-
+</RelativeLayout>
 
