--- a/app/src/main/res/layout/item_partylist.xml
+++ b/app/src/main/res/layout/item_partylist.xml
@@ -1,42 +1,85 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="85dp"
-    android:orientation="horizontal"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="org.collapsed.ssuparty_android.ui.main.MainActivity"
-    >
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal"
+    tools:context="org.collapsed.ssuparty_android.ui.main.MainActivity">
 
-    <ImageView
-        android:id="@+id/partylist_main_image_img"
-        android:layout_width="70dp"
-        android:layout_height="70dp"
-        />
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <RelativeLayout
+            android:id="@+id/partylist_top_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
+            android:paddingLeft="15dp"
+            android:paddingRight="15dp">
+
+            <TextView
+                android:id="@+id/partylist_category"
+                android:layout_width="wrap_content"
+                android:layout_height="30dp"
+                android:layout_marginRight="15dp"
+                android:text="공모전"
+                android:textSize="15sp"
+                android:textColor="#47C832"/>
+
+            <TextView
+                android:id="@+id/partylist_deadline_txt"
+                android:layout_width="wrap_content"
+                android:layout_height="30dp"
+                android:layout_toRightOf="@id/partylist_category"
+                android:layout_marginRight="15dp"
+                android:text="D - 28"
+                android:textColor="#FF0000"
+                android:textSize="15sp" />
+
+            <TextView
+                android:id="@+id/partylist_tag_txt"
+                android:layout_width="wrap_content"
+                android:layout_height="30dp"
+                android:layout_toRightOf="@id/partylist_deadline_txt"
+                android:text="#IT  #JAVA"
+                android:textSize="15sp"
+                android:textColor="#00D8FF"/>
+
+            <TextView
+                android:id="@+id/partylist_member_num_txt"
+                android:layout_width="wrap_content"
+                android:layout_height="30dp"
+                android:layout_alignParentRight="true"
+                android:text="5/10"
+                android:textSize="15sp" />
+
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/partylist_bottom_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/partylist_top_layout"
+            android:layout_marginBottom="15dp"
+            android:paddingLeft="15dp">
+
+            <TextView
+                android:id="@+id/partylist_title_txt"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="공모전타이틀"
+                android:textSize="25sp" />
+
+        </RelativeLayout>
+
+    </RelativeLayout>
 
     <LinearLayout
-        android:layout_width="100dp"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        >
-
-        <TextView
-            android:id="@+id/partylist_title_txt"
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:textSize="25dp"
-            android:gravity="center"
-            android:layout_margin="10dp"
-            />
-
-        <TextView
-            android:id="@+id/partylist_member_num_txt"
-            android:layout_width="match_parent"
-            android:layout_height="30dp"
-            android:textSize="15dp"
-            android:gravity="right"
-            />
-    </LinearLayout>
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#828282"/>
 
 
 </RelativeLayout>
