--- a/app/src/main/res/layout/item_partylist.xml
+++ b/app/src/main/res/layout/item_partylist.xml
@@ -1,20 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/item_root_layout"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="horizontal"
+    android:layout_height="91dp"
+    android:orientation="vertical"
     tools:context="org.collapsed.ssuparty_android.ui.main.MainActivity">
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
 
         <RelativeLayout
             android:id="@+id/partylist_top_layout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="30dp"
             android:layout_marginTop="15dp"
             android:paddingLeft="15dp"
             android:paddingRight="15dp">
@@ -60,7 +61,7 @@
         <RelativeLayout
             android:id="@+id/partylist_bottom_layout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="30dp"
             android:layout_below="@id/partylist_top_layout"
             android:layout_marginBottom="15dp"
             android:paddingLeft="15dp">
@@ -68,7 +69,7 @@
             <TextView
                 android:id="@+id/partylist_title_txt"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="30dp"
                 android:text="공모전타이틀"
                 android:textSize="25sp" />
 
@@ -81,5 +82,4 @@
         android:layout_height="1dp"
         android:background="#828282"/>
 
-
-</RelativeLayout>
+</LinearLayout>
