--- a/app/src/main/res/layout/fragment_signup2.xml
+++ b/app/src/main/res/layout/fragment_signup2.xml
@@ -19,7 +19,7 @@
             android:textSize="12sp" />
 
         <android.support.v7.widget.AppCompatSpinner
-            android:id="@+id/signup_major_spinner"
+            android:id="@+id/signup_grade_spinner"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:entries="@array/signup_grade" />
@@ -66,7 +66,7 @@
                     android:layout_margin="4dp"
                     android:background="@android:color/transparent"
                     android:hint="학번을 입력하세요"
-                    android:inputType="text"
+                    android:inputType="numberDecimal"
                     android:maxLines="1"
                     android:textAlignment="viewEnd"
                     android:textSize="12sp" />
