--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -12,6 +12,7 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:dropDownListViewStyle">@style/SpinnerStyle</item>
         <item name="android:windowLightStatusBar">false</item>
     </style>
 
@@ -26,13 +27,31 @@
 
     <style name="CreatePartyEditTextTheme" parent="@android:style/Widget.EditText">
         <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">@dimen/createactivity_content_height</item>
-        <item name="android:layout_marginTop">@dimen/createactivity_button_margin</item>
-        <item name="android:textColor">#000000</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_margin">4dp</item>
+        <item name="android:layout_gravity">center_vertical</item>
+        <item name="android:textColor">#44394d</item>
         <item name="android:textColorHint">#828282</item>
-        <item name="android:textSize">@dimen/createactivity_content_textsize</item>
-        <item name="android:paddingTop">@dimen/createactivity_hint_marginTop</item>
-        <item name="android:textCursorDrawable">@null</item>
+        <item name="android:textSize">12sp</item>
+        <item name="android:maxLines">1</item>
+    </style>
+
+    <style name="CreatePartyLabelTextTheme" parent="@android:style/Widget.TextView">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_gravity">left</item>
+        <item name="android:layout_marginLeft">8dp</item>
+        <item name="android:textColor">#44394d</item>
+        <item name="android:textSize">14sp</item>
+    </style>
+
+    <style name="CreatePartyConstraintTextTheme" parent="@android:style/Widget.TextView">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_gravity">right</item>
+        <item name="android:layout_marginRight">8dp</item>
+        <item name="android:textColor">#44394d</item>
+        <item name="android:textSize">11sp</item>
     </style>
 
     <style name="TextLabel" parent="TextAppearance.AppCompat">
@@ -43,6 +62,11 @@
         <item name="colorAccent">#000000</item>
         <item name="colorControlNormal">#000000</item>
         <item name="colorControlActivated">#000000</item>
+    </style>
+
+    <style name="SpinnerStyle" parent="Widget.AppCompat.ListView.DropDown">
+        <item name="android:divider">#d1d1d1</item>
+        <item name="android:dividerHeight">0.5dp</item>
     </style>
 
     <style name="TextLabel2" parent="TextAppearance.Design.Hint">
