--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -12,7 +12,7 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
-        <item name="android:dropDownListViewStyle">@style/SpinnerStyle</item>
+        <item name="android:dropDownListViewStyle">@style/SGSpinnerStyle</item>
         <item name="android:windowLightStatusBar">false</item>
     </style>
 
@@ -25,7 +25,7 @@
         <item name="android:background">#00FF0000</item>
     </style>
 
-    <style name="CreatePartyEditTextTheme" parent="@android:style/Widget.EditText">
+    <style name="SGEditTextTheme" parent="@android:style/Widget.EditText">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_margin">4dp</item>
@@ -54,30 +54,10 @@
         <item name="android:textSize">11sp</item>
     </style>
 
-    <style name="TextLabel" parent="TextAppearance.AppCompat">
-        <!-- Hint color and label color in FALSE state -->
-        <item name="android:textColorHint">#000000</item>
-        <item name="android:textSize">25dp</item>
-        <!-- Label color in TRUE state and bar color FALSE and TRUE State -->
-        <item name="colorAccent">#000000</item>
-        <item name="colorControlNormal">#000000</item>
-        <item name="colorControlActivated">#000000</item>
-    </style>
-
-    <style name="SpinnerStyle" parent="Widget.AppCompat.ListView.DropDown">
+    <style name="SGSpinnerStyle" parent="Widget.AppCompat.ListView.DropDown">
         <item name="android:divider">#d1d1d1</item>
         <item name="android:dividerHeight">0.5dp</item>
     </style>
-
-    <style name="TextLabel2" parent="TextAppearance.Design.Hint">
-        <item name="android:textSize">@dimen/createactivity_hint_TextSize</item>
-        <item name="android:textColor">#bcb5e1</item>
-    </style>
-
-    <declare-styleable name="CustomTextView">
-        <attr name="customFont" format="string" />
-    </declare-styleable>
-
 
     <style name="SSUPartyTheme.NoActionBar.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
