--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -59,6 +59,11 @@
         <item name="android:dividerHeight">0.5dp</item>
     </style>
 
+    <declare-styleable name="CustomTextView">
+        <attr name="customFont" format="string"/>
+    </declare-styleable>
+        
+
     <style name="SSUPartyTheme.NoActionBar.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
     <style name="SSUPartyTheme.NoActionBar.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
