[SGA-2] 모임생성시 발생할 수 있는 예외처리

--- a/app/src/main/res/layout/activity_createparty.xml
+++ b/app/src/main/res/layout/activity_createparty.xml
@@ -36,9 +36,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="새 모임"
-                android:textStyle="bold"
                 android:textColor="#ffffff"
-                android:textSize="15dp" />
+                android:textSize="15dp"
+                android:textStyle="bold" />
 
         </FrameLayout>
 
@@ -50,9 +50,9 @@
             android:layout_margin="5dp"
             android:background="@android:color/transparent"
             android:text="확인"
-            android:textStyle="bold"
             android:textColor="#ffffff"
-            android:textSize="13sp" />
+            android:textSize="13sp"
+            android:textStyle="bold" />
 
     </RelativeLayout>
 
@@ -189,9 +189,25 @@
             android:layout_marginTop="@dimen/createactivity_content_marginTop"
             android:orientation="vertical">
 
-            <TextView
-                style="@style/CreatePartyLabelTextTheme"
-                android:text="모집인원수" />
+            <RelativeLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    style="@style/CreatePartyLabelTextTheme"
+                    android:text="모집인원수" />
+
+                <TextView
+                    android:id="@+id/createparty_membernum_help_txt"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:layout_marginRight="10dp"
+                    android:text="최대 100명까지 모집할 수 있어요!"
+                    android:textColor="#828282"
+                    android:textSize="12sp" />
+
+            </RelativeLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -326,7 +342,7 @@
         android:background="#a75feb"
         android:text="등록하기"
         android:textColor="#ffffff"
-        android:textStyle="bold"
-        android:textSize="13sp" />
+        android:textSize="13sp"
+        android:textStyle="bold" />
 
 </LinearLayout>
