--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -1,87 +1,326 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="#f6f5f6"
+    android:orientation="vertical"
     tools:context="org.collapsed.ssuparty_android.ui.signup.SignupActivity">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/signup_toolbar"
         android:layout_width="match_parent"
-        android:layout_height="56dp"
-        android:background="#a15ffb">
+        android:layout_height="?attr/actionBarSize"
+        android:background="?attr/colorPrimary"
+        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+        android:elevation="4dp">
 
     </android.support.v7.widget.Toolbar>
 
-    <RelativeLayout
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@id/signup_toolbar"
-        android:layout_marginBottom="38dp"
-        android:layout_marginLeft="14dp"
-        android:layout_marginRight="14dp"
-        android:layout_marginTop="48dp">
-
-        <android.support.v4.view.ViewPager
-            android:id="@+id/signup_pager"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+        android:layout_height="match_parent">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
             android:layout_marginLeft="14dp"
             android:layout_marginRight="14dp"
-            android:orientation="vertical">
+            android:layout_marginTop="10dp"
+            android:orientation="vertical"
+            android:paddingBottom="20dp">
 
-            <TextView
-                android:id="@+id/signup_progress_txt"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:drawablePadding="8dp"
-                android:drawableRight="@drawable/planet"
-                android:text="회원가입이 0% 완료되었습니다" />
-
-            <ProgressBar
-                android:id="@+id/signup_progress_bar"
-                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
+            <LinearLayout
+                android:id="@+id/signup_name_txt_layout"
                 android:layout_width="match_parent"
-                android:layout_height="9dp"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="left"
+                    android:layout_marginLeft="8dp"
+                    android:text="이름(실명)"
+                    android:textColor="#848181"
+                    android:textSize="12sp" />
+
+                <android.support.v7.widget.CardView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="8dp">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
+
+                        <ImageView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_margin="8dp"
+                            android:src="@drawable/planet_in_box" />
+
+                        <EditText
+                            android:id="@+id/signup_name_edittxt"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_vertical"
+                            android:layout_margin="4dp"
+                            android:background="@android:color/transparent"
+                            android:hint="이름을 입력하세요"
+                            android:inputType="text"
+                            android:maxLines="1"
+                            android:textSize="12sp" />
+                    </LinearLayout>
+                </android.support.v7.widget.CardView>
+
+                <TextView
+                    android:id="@+id/signup_name_constraint_txt"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="right"
+                    android:layout_marginRight="8dp"
+                    android:text="0/10"
+                    android:textColor="#bcb5e1"
+                    android:textSize="11sp" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/signup_nickname_txt_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="left"
+                    android:layout_marginLeft="8dp"
+                    android:text="닉네임"
+                    android:textColor="#848181"
+                    android:textSize="12sp" />
+
+                <android.support.v7.widget.CardView
+                    android:layout_width="match_parent"
+                    android:layout_height="29dp"
+                    android:layout_margin="8dp">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
+
+                        <ImageView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_margin="8dp"
+                            android:src="@drawable/planet_in_box" />
+
+                        <EditText
+                            android:id="@+id/signup_nickname_edittxt"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_vertical"
+                            android:layout_margin="4dp"
+                            android:background="@android:color/transparent"
+                            android:hint="닉네임을 입력하세요"
+                            android:inputType="text"
+                            android:maxLines="1"
+                            android:textSize="12sp" />
+                    </LinearLayout>
+                </android.support.v7.widget.CardView>
+
+                <TextView
+                    android:id="@+id/signup_nickname_constraint_txt"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="right"
+                    android:layout_marginRight="8dp"
+                    android:text="0/10"
+                    android:textColor="#bcb5e1"
+                    android:textSize="11sp" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/signup_major_txt_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="left"
+                    android:layout_marginLeft="8dp"
+                    android:text="전공"
+                    android:textColor="#848181"
+                    android:textSize="12sp" />
+
+                <android.support.v7.widget.CardView
+                    android:layout_width="match_parent"
+                    android:layout_height="29dp"
+                    android:layout_margin="8dp">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
+
+                        <ImageView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_margin="8dp"
+                            android:src="@drawable/planet_in_box" />
+
+                        <AutoCompleteTextView
+                            android:id="@+id/signup_major_edittxt"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_vertical"
+                            android:layout_margin="4dp"
+                            android:background="@android:color/transparent"
+                            android:hint="전공을 입력하세요 (자동완성)"
+                            android:inputType="text"
+                            android:maxLines="1"
+                            android:textSize="12sp" />
+                    </LinearLayout>
+                </android.support.v7.widget.CardView>
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/signup_grade_spinner_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="8dp"
                 android:layout_marginTop="10dp"
-                android:indeterminate="false"
-                android:max="100"
-                android:progress="20" />
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="학년"
+                    android:textColor="#848181"
+                    android:textSize="12sp" />
+
+                <android.support.v7.widget.AppCompatSpinner
+                    android:id="@+id/signup_grade_spinner"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:entries="@array/signup_grade" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/signup_stdnum_txt_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="left"
+                    android:layout_marginLeft="8dp"
+                    android:text="학번"
+                    android:textColor="#848181"
+                    android:textSize="12sp" />
+
+                <android.support.v7.widget.CardView
+                    android:layout_width="match_parent"
+                    android:layout_height="29dp"
+                    android:layout_margin="8dp">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
+
+                        <ImageView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_margin="8dp"
+                            android:src="@drawable/planet_in_box" />
+
+                        <EditText
+                            android:id="@+id/signup_stdnum_edittxt"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_vertical"
+                            android:layout_margin="4dp"
+                            android:background="@android:color/transparent"
+                            android:hint="학번을 입력하세요"
+                            android:inputType="numberDecimal"
+                            android:maxLines="1"
+                            android:textSize="12sp" />
+                    </LinearLayout>
+                </android.support.v7.widget.CardView>
+
+                <TextView
+                    android:id="@+id/signup_stdnum_constraint_txt"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="right"
+                    android:layout_marginRight="8dp"
+                    android:text="0/8"
+                    android:textColor="#bcb5e1"
+                    android:textSize="11sp" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/signup_gender_spinner_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="8dp"
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="성별"
+                    android:textColor="#848181"
+                    android:textSize="12sp" />
+
+                <android.support.v7.widget.AppCompatSpinner
+                    android:id="@+id/signup_gender_spinner"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:entries="@array/signup_gender" />
+
+            </LinearLayout>
 
             <LinearLayout
                 android:id="@+id/signup_complete_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:layout_marginTop="14dp"
-                android:visibility="gone">
-                
+                android:layout_gravity="bottom"
+                android:layout_marginTop="20dp"
+                android:orientation="vertical">
+
                 <CheckBox
                     android:id="@+id/signup_private_agree_checkbox"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:checked="false"
-                    android:text="개인정보 활용 수집 및 활용 동의"/>
-                
+                    android:text="개인정보 활용 수집 및 활용 동의" />
+
                 <Button
                     android:id="@+id/signup_submit_btn"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="가입완료"
-                    android:textColor="@color/colorWhite"
+                    android:layout_gravity="right"
                     android:backgroundTint="#825df8"
-                    android:layout_gravity="right"/>
+                    android:text="가입완료"
+                    android:textColor="@color/colorWhite" />
 
             </LinearLayout>
-
         </LinearLayout>
-    </RelativeLayout>
-</RelativeLayout>
+    </ScrollView>
+</LinearLayout>
